--- a/index.html
+++ b/index.html
@@ -411,11 +411,10 @@
           <div class="divider"> </div>
           <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. You can send me a message on this website!</p>
           <br>
-          <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
+          <p> <i class="fa fa-envelope-o"> </i>   jackdouglas145@gmail.com </p>
           <br>
           <p> Check out some other platforms I'm on! </p>
-          <br>
-          <div class="row" style="float: center;">
+          <div class="row" style="text-align: center;">
             <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
               <i class="fa fa-linkedin-square fa-4x"> </i>
             </a>
@@ -423,7 +422,7 @@
               <i class="fa fa-github fa-4x" style="text-decoration: none"> </i>
             </a>
             <a href="https://devpost.com/J-Douglas?ref_content=user-portfoli&ref_feature=portfolio&ref_medium=global-nav" style="text-decoration: none">
-              <img id="devpost" src="https://devpost-challengepost.netdna-ssl.com/assets/reimagine2/devpost-icon-900856edde1e4a510a65f29a1bde7a2b.svg"> </i>
+              <img src="https://seeklogo.com/images/D/devpost-logo-95FF685C5D-seeklogo.com.png"> </i>
             </a>
         </div>
       </div>
