--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
       float: right;
     }
 
+    #media {
+      float: center;
+    }
+
     .navbar-header {
       float: left;
       padding: 15px;
@@ -414,7 +418,7 @@
           <p> <i class="fa fa-envelope-o"> </i>   jackdouglas145@gmail.com </p>
           <br>
           <p> Check out some other platforms I'm on! </p>
-          <div class="row">
+          <div id="media" class="row col-md-12">
             <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
               <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
             </a>
@@ -422,7 +426,7 @@
               <i class="fa fa-github fa-4x" style="color: #014B67;"> </i>
             </a>
             <a href="https://devpost.com/J-Douglas?ref_content=user-portfoli&ref_feature=portfolio&ref_medium=global-nav" style="text-decoration: none">
-              <img src="https://seeklogo.com/images/D/devpost-logo-95FF685C5D-seeklogo.com.png" style="width: 20%; height: 20%;"> </i>
+              <img src="https://seeklogo.com/images/D/devpost-logo-95FF685C5D-seeklogo.com.png" style="width: 25%; height: 80%;"> </i>
             </a>
         </div>
       </div>
