--- a/index.html
+++ b/index.html
@@ -402,22 +402,25 @@
         <div class="section-title2">
           <h2> Contact </h2>
           <div class="divider"> </div>
-          <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. You can send me a message on this website!</p>
+          <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. </p>
           <br>
-          <p> <i class="fa fa-envelope-o"> </i>   jackdouglas145@gmail.com </p>
+          <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
+          <br>
+          <p> You can send me a message on this website! </p>
           <form>
             <div class="form-group">
-              <label> Email address </label>
+              <label style="text-align: left;"> Email address </label>
               <input type="email" class="form-control" aria-describedby="emailHelp">
             </div>
             <div class="form-group">
-              <label> Subject </label>
+              <label style="text-align: left;"> Subject </label>
               <input type="subject" class="form-control">
             </div>
             <div class="form-group">
-              <label> Message </label>
+              <label style="text-align: left;"> Message </label>
               <textarea class="form-control" rows="3"></textarea>
             </div>
+            <button type="submit" class="btn btn-primary">Send</button>
           </form>
           <p> Check out some other platforms I'm on! </p>
           <div id="media" class="row">
