--- a/index.html
+++ b/index.html
@@ -405,23 +405,20 @@
           <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. </p>
           <br>
           <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
-          <br>
           <p> You can send me a message on this website! </p>
           <form>
             <div class="form-group">
-              <label style="text-align: left;"> Email address </label>
-              <input type="email" class="form-control" aria-describedby="emailHelp">
+              <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email">
             </div>
             <div class="form-group">
-              <label style="text-align: left;"> Subject </label>
-              <input type="subject" class="form-control">
+              <input type="subject" class="form-control" placeholder="Subject">
             </div>
             <div class="form-group">
-              <label style="text-align: left;"> Message </label>
-              <textarea class="form-control" rows="3"></textarea>
+              <textarea class="form-control" rows="3" placeholder="Message"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Send</button>
           </form>
+          <br>
           <p> Check out some other platforms I'm on! </p>
           <div id="media" class="row">
             <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
