--- a/index.html
+++ b/index.html
@@ -403,7 +403,6 @@
           <h2> Contact </h2>
           <div class="divider"> </div>
           <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. </p>
-          <br>
           <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
           <p> You can send me a message on this website! </p>
           <form>
@@ -421,12 +420,15 @@
           <br>
           <p> Check out some other platforms I'm on! </p>
           <div id="media" class="row">
-            <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
-              <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
-            </a>
-            <a href="https://github.com/j-douglas/" style="text-decoration: none">
-              <i class="fa fa-github fa-4x" style="color: #014B67;"> </i>
-            </a>
+            <ul style="text-align:center;">
+              <li href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
+                <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
+              </li>
+              <br>
+              <li href="https://github.com/j-douglas/" style="text-decoration: none">
+                <i class="fa fa-github fa-4x" style="color: #000000;"> </i>
+              </li>
+            </ul>
         </div>
       </div>
     </section>
