--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     .cover-photo {
       background-image: url("images/IveyPhoto.jpg");
-      background: rgba(51,,51,51,0.5) !important;
+      background-image: rgba(51,,51,51,0.5) !important;
       width: 100%;
       height: 100%;
       top: -126;
@@ -346,7 +346,7 @@
         <div class="section-title2">
           <h2> About Me </h2>
           <div class="divider"> </div>
-          <div class="row">  
+ 
             <div class="col-md-6" style="text-align: left;">
               <p style="font-size: 24px;"> <b> Hey! </b> </p>
               <p style="font-size: 20px;"> I am a 16-year-old high school student born and raised in Toronto, Canada. I have attended Upper Canada College since grade 9. </p>
@@ -354,7 +354,7 @@
             <div class="col-md-6">
                 <img src="images/CanadaWonderland.jpg" style="float: center;">
             </div>
-          </div>
+
         </div>
       </div>
     </section>
