--- a/index.html
+++ b/index.html
@@ -22,20 +22,10 @@
 
   <style>
 
-    #Home {
-      padding-top: 20px;
-      padding-bottom: 20px;
-    }
-
-    .cover-photo {
-      background-image: url("images/IveyPhoto.jpg");
-      background-image: rgba(51,,51,51,0.5) !important;
-      width: 100%;
-      height: 100%;
-      top: -126;
+    #coverPhoto {
+      top: 0;
       left: 0;
       position: relative;
-
     }
 
   	#AboutMe {
@@ -295,20 +285,6 @@
       transform: rotate(45deg); 
     }
 
-    /** Background photo top */
-
-    .thumbnail {
-      position: relative;
-    }
-
-    .caption {
-      position: absolute;
-      top: 45%;
-      left: 0;
-      width: 100%;
-    }
-
-
   </style>
   
   <body>
@@ -341,27 +317,7 @@
       </div>
     </nav>
 
-    <div class="row">
-      <div class="thumbnail text-center">
-          <img src="img/IveyPhoto.jpg" alt="" class="img-responsive">
-          <div class="caption">
-              <p>Hi! My name is Jack Douglas. This is my personal website. Have a look around!</p>
-          </div>
-      </div>
-    </div>
-
-    <!--
-    <section id="Home">
-        <div class="col-md-12" style="text-align: center;">
-          <p2 id="intro1"> Hi! My name is <p style="font-size: 48px;"> <b> Jack Douglas</b>.</p></p2>
-          <p3 id="intro3"> This is my personal website. Have a look around! </p3>
-          <div class="cover-photo">
-          </div>
-        </div>
-      </div>
-    </section>
-
--->
+    <img src="images/CoverPhoto.jpg" id="coverPhoto"> </img>
 
     <section id="AboutMe">
       <div class="container">
