--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <style>
 
     #coverPhoto {
-      top: 0;
-      left: 0;
+      top: -110px;
+      left: -15px;
       position: relative;
     }
 
@@ -44,10 +44,6 @@
       background-color: #EAF9FA;
       padding-top: 20px;
       padding-bottom: 7px;
-    }
-
-    #navbar {
-      opacity: 10%;
     }
 
     #intro1 {
@@ -87,7 +83,8 @@
     }
 
     #navbar { 
-      background-color: rgba(240,240,240,0.9) !important; 
+      background-color: rgba(0,0,0,0.85) !important; 
+      opacity: 10%;
     }
 
     /* Default mode */
