--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
       float:center;
     }
 
-    #navbar { 
-      background-color: rgba(0,0,0,0.85) !important; 
-      opacity: 10%;
+    #navbar.AboutMe:before { 
+      background-color: rgba(0,0,0,0) !important; 
+
+    }
+    #navbar.AboutMe:after{
+      background: rgba(240,240,240,0.9) !important;
     }
 
     /* Default mode */
