--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
       float:center;
     }
 
-    #navbar.AboutMe:before { 
+    #navbar.marker:before { 
       background-color: rgba(0,0,0,0) !important; 
 
     }
-    #navbar.AboutMe:after{
+    #navbar.marker:after{
       background: rgba(240,240,240,0.9) !important;
     }
 
@@ -317,6 +317,9 @@
       </div>
     </nav>
 
+    <div style="top: 150px;" id="marker">
+    </div>
+
     <img src="images/CoverPhoto.jpg" id="coverPhoto"> </img>
 
     <section id="AboutMe">
@@ -427,7 +430,7 @@
                   <div class="col-md-4">
                     <h3 id="footer3"> Made on
                       <a href="https://github.com/j-douglas/j-douglas.github.io" style="text-decoration: none"> 
-                        <i id="githubImg"class="fa fa-github fa-lg"       style="color: #3F3E3E;"></i>
+                        <i id="githubImg"class="fa fa-github fa-lg" style="color: #3F3E3E;"></i>
                       </a>
                       with
                       <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
