--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       padding-bottom: 7px;
     }
 
+    #marker {
+      height: 10px;
+    }
+
     #intro1 {
       font-size: 20px;
     }
@@ -317,7 +321,7 @@
       </div>
     </nav>
 
-    <div style="top: 150px;" id="marker">
+    <div id="marker">
     </div>
 
     <img src="images/CoverPhoto.jpg" id="coverPhoto"> </img>
