--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       float:center;
     }
 
-    #navbar.marker:before { 
+    #navbar.marker::before { 
       background-color: rgba(0,0,0,0) !important; 
 
     }
-    #navbar.marker:after{
+    #navbar.marker::after{
       background: rgba(240,240,240,0.9) !important;
     }
 
@@ -328,7 +328,7 @@
 
     <section id="AboutMe">
       <div class="container">
-        <div class="section-title2">
+        <div class="section-title1">
           <h2> About Me </h2>
           <div class="divider"> </div>
  
@@ -348,7 +348,7 @@
 
     <section id="Projects">
       <div class="container">
-        <div class="section-title1">
+        <div class="section-title2">
           <h2> Projects </h2>
           <div class="divider"> </div>
           <p> Tralalala </p>
@@ -360,7 +360,7 @@
 
     <section id="Skills">
       <div class="container">
-        <div class="section-title2">
+        <div class="section-title1">
           <h2> Skills </h2>
           <div class="divider"> </div>
           <p> Tralalala </p>
@@ -372,7 +372,7 @@
 
     <section id="Awards">
       <div class="container">
-        <div class="section-title1">
+        <div class="section-title2">
           <h2> Awards </h2>
           <div class="divider"> </div>
           <p> Tralalala </p>
@@ -384,7 +384,7 @@
 
     <section id="Contact">
       <div class="container">
-        <div class="section-title2">
+        <div class="section-title1">
           <h2> Contact </h2>
           <div class="divider"> </div>
           <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. </p>
