--- a/index.html
+++ b/index.html
@@ -28,19 +28,13 @@
       position: relative;
     }
 
-  	#AboutMe {
+  	#Projects {
   		background-color: #EAF9FA;
       padding-top: 20px;
       padding-bottom: 7px;
   	}
 
-    #Skills {
-      background-color: #EAF9FA;
-      padding-top: 20px;
-      padding-bottom: 7px;
-    }
-
-    #Contact {
+    #Awards {
       background-color: #EAF9FA;
       padding-top: 20px;
       padding-bottom: 7px;
@@ -331,7 +325,7 @@
         <div class="section-title1">
           <h2> About Me </h2>
           <div class="divider"> </div>
- 
+          <div class="row">
             <div class="col-md-4" style="text-align: left;">
               <p style="font-size: 24px;"> <b> Hey! </b> </p>
               <p style="font-size: 20px;"> I am a 16-year-old high school student born and raised in Toronto, Canada. I have attended Upper Canada College since grade 9. </p>
@@ -339,7 +333,7 @@
             <div class="col-md-4">
                 <img src="images/CanadaWonderland.jpg" style="float: center;">
             </div>
-
+          </div>
         </div>
       </div>
     </section>
@@ -405,7 +399,7 @@
           <br>
           <p> Check out some other platforms I'm on! </p>
           <div id="media" class="row">
-            <ul style="text-align:center;">
+            <div class="col-md-12" style="text-align:center;">
               <li href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
                 <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
               </li>
@@ -413,7 +407,7 @@
               <li href="https://github.com/j-douglas/" style="text-decoration: none">
                 <i class="fa fa-github fa-4x" style="color: #000000;"> </i>
               </li>
-            </ul>
+            <div>
         </div>
       </div>
     </section>
