--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       position: relative;
     }
 
+    #AboutMe {
+      top: 600px;
+    }
+
   	#Projects {
   		background-color: #EAF9FA;
       padding-top: 20px;
@@ -292,9 +296,10 @@
         <div class="col-md-4">
             <div class="tabbable-line">
               <ul class="nav nav-tabs">
-                <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Home"> Home </a></li>
                 <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
                 <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
+                <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
+                <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
               </ul>
             </div>
         </div>
@@ -306,8 +311,6 @@
         <div class="col-md-4">
             <div class="tabbable-line">
               <ul class="nav nav-tabs">
-                <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
-                <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
                 <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
               </ul>
             </div>
@@ -398,15 +401,15 @@
           </form>
           <br>
           <p> Check out some other platforms I'm on! </p>
-          <div id="media" class="row">
+          <div id="media" class="col-md-12">
             <div class="col-md-12" style="text-align:center;">
-              <li href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
+              <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
                 <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
-              </li>
+              </a>
               <br>
-              <li href="https://github.com/j-douglas/" style="text-decoration: none">
+              <a href="https://github.com/j-douglas/" style="text-decoration: none">
                 <i class="fa fa-github fa-4x" style="color: #000000;"> </i>
-              </li>
+              </a>
             <div>
         </div>
       </div>
