--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
 
   </head>
 
+  <script type="text/javascript">
+
+    $(function(){
+      $(window).scroll(function() {
+          var scroll = $(window).scrollTop(); // how many pixels you've scrolled
+          var os = $('#marker').offset().top; // pixels to the top of div1
+          var ht = $('#marker').height(); // height of div1 in pixels
+          // if you've scrolled further than the top of div1 plus it's height
+          // change the color. either by adding a class or setting a css property
+          if(scroll > os + ht){
+              $('#navbar').addClass('navbarChange');
+          }
+      });
+    });
+
+  </script>
+
   <style>
 
     #coverPhoto {
@@ -84,12 +101,12 @@
       float:center;
     }
 
-    #navbar.marker::before { 
+    #navbar { 
       background-color: rgba(0,0,0,0) !important; 
 
     }
-    #navbar.marker::after{
-      background: rgba(240,240,240,0.9) !important;
+    .navbarChange {
+      background-color: rgba(240,240,240,0.9) !important;
     }
 
     /* Default mode */
