--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
       background-color: rgba(240,240,240,0.9) !important;
     }
 
+    .mediaAlign {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     /* Default mode */
     .tabbable-line > .nav-tabs {
       border: none;
@@ -421,7 +427,7 @@
           <br>
           <p> Check out some other platforms I'm on! </p>
           <div id="media" class="col-md-12">
-            <div class="col-md-12" style="text-align:center;">
+            <div class="row mediaAlign" >
               <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
                 <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
               </a>
