--- a/index.html
+++ b/index.html
@@ -427,14 +427,16 @@
           <br>
           <p> Check out some other platforms I'm on! </p>
           <div id="media" class="col-md-12">
-            <div class="row mediaAlign" >
-              <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
-                <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
-              </a>
-              <br>
-              <a href="https://github.com/j-douglas/" style="text-decoration: none">
-                <i class="fa fa-github fa-4x" style="color: #000000;"> </i>
-              </a>
+            <div class="row">
+              <div class="mediaAlign">
+                <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
+                  <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
+                </a>
+                <br>
+                <a href="https://github.com/j-douglas/" style="text-decoration: none">
+                  <i class="fa fa-github fa-4x" style="color: #000000;"> </i>
+                </a>
+              </div>
             <div>
         </div>
       </div>
