--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     $(function(){
       $(window).scroll(function() {
-          var scroll = $(window).screenY(); // Y-pos of screen
+          var scroll = $(window).screenY ; // Y-pos of screen
           var os = $('#marker').offset().top; // pixels to the top of div1
           var ht = $('#marker').height(); // height of div1 in pixels
           // if you've scrolled further than the top of div1 plus it's height
