--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     $(function(){
       $(window).scroll(function() {
-          var scroll = $(window).screenY ; // Y-pos of screen
+          var scroll = $(window).screenY; // pixels scrolled from top
           var os = $('#marker').offset().top; // pixels to the top of div1
           var ht = $('#marker').height(); // height of div1 in pixels
           // if you've scrolled further than the top of div1 plus it's height
@@ -34,6 +34,7 @@
           } else{
               $('#navbar').addClass('navbar1');
           }
+          console.log('scroll');
       });
     });
 
