--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           } else{
               $('#navbar').addClass('navbar1');
           }
+          console.log('os');
+          console.log('ht');
           console.log('scroll');
       });
     });
@@ -421,17 +423,21 @@
           </form>
           <br>
           <p> Check out some other platforms I'm on! </p>
-          <div id="media" class="col-md-12">
-            <div class="row">
-                <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
-                  <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
-                </a>
-                <br>
-                <a href="https://github.com/j-douglas/" style="text-decoration: none">
-                  <i class="fa fa-github fa-4x" style="color: #000000;"> </i>
-                </a>
-            <div>
-        </div>
+          <div class="row">
+            <div class="col-md-4">
+            </div>
+            <div id="media" class="col-md-4" style="float: center;">
+                  <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
+                    <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
+                  </a>
+                  <br>
+                  <a href="https://github.com/j-douglas/" style="text-decoration: none">
+                    <i class="fa fa-github fa-4x" style="color: #000000;"> </i>
+                  </a>
+              </div>
+              <div class="col-md-4">
+            </div>
+          </div>
       </div>
     </section>
 
