--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@
 
   <script type="text/javascript">
 
+    function calibrate(event){
+      var top = event.screenY;
+      var left = event.screenX;
+    }
+
     $(function(){
       $(window).scroll(function() {
-          var scroll = $(window).scrollTop(); // pixels scrolled from top
+          // var scroll = $(window).scrollTop(); // pixels scrolled from top
           var os = $('#marker').offset().top; // pixels to the top of div1
           var ht = $('#marker').height(); // height of div1 in pixels
           // if you've scrolled further than the top of div1 plus it's height
           // change the color. either by adding a class or setting a css property
-          if(scroll > os + ht){
+          if(top > os + ht){
               $('#navbar').addClass('navbar2');
           } else{
               $('#navbar').addClass('navbar1');
@@ -341,7 +346,7 @@
     <div id="marker">
     </div>
 
-    <img src="images/CoverPhoto.jpg" id="coverPhoto"> </img>
+    <img src="images/TBCoverPhoto.jpg" id="coverPhoto"> </img>
 
     <section id="AboutMe">
       <div class="container">
