--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="Font_Awesome/css/font-awesome.css">
 
@@ -31,6 +33,8 @@
         $('#navbar').addClass('navbar1').removeClass('navbar2');
     }
     });
+
+    console.log()
 
   </script>
 
