--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <div id="marker">
     </div>
 
-    <img src="images/TBCoverPhoto.jpg" id="coverPhoto"> </img>
+    <img src="images/TBCoverPhoto.jpg" style="width: 1455px;" id="coverPhoto"> </img>
 
     <section id="AboutMe">
       <div class="container">
