--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
@@ -309,11 +310,11 @@
   
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-    <nav class="navbar sticky-top navbar1" id="navbar"> 
+    <nav class="navbar sticky-top navbar1" id="navbar" role="navigation"> 
       <div class="navbar-header row">
         <div class="col-md-4">
             <div class="tabbable-line">
-              <ul class="nav nav-tabs">
+              <ul class="nav navbar-nav nav-tabs">
                 <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
                 <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
                 <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
@@ -328,7 +329,7 @@
         </div>
         <div class="col-md-4">
             <div class="tabbable-line">
-              <ul class="nav nav-tabs">
+              <ul class="nav navbar-nav nav-tabs">
                 <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
               </ul>
             </div>
