--- a/index.html
+++ b/index.html
@@ -310,6 +310,75 @@
       margin-top: -10px;
     }
 
+    .btn {
+      background-color: #4CAF50; /* Green */
+      border: none;
+      border-radius: 12px;
+      color: white;
+      padding: 16px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      -webkit-transition-duration: 0.4s; /* Safari */
+      transition-duration: 0.4s;
+      cursor: pointer;
+      background-color: white; 
+      color: black; 
+      border: 2px solid #008CBA;
+    }
+
+    .btnn:hover {
+        background-color: #008CBA;
+        color: white;
+    }
+
+    .btn:after {
+      content: "";
+      background: #f1f1f1;
+      display: block;
+      position: absolute;
+      padding-top: 300%;
+      padding-left: 350%;
+      margin-left: -20px !important;
+      margin-top: -120%;
+      opacity: 0;
+      transition: all 0.8s
+    }
+
+    .btn:active:after {
+      padding: 0;
+      margin: 0;
+      opacity: 1;
+      transition: 0s
+    }
+
+    .btn span {
+      cursor: pointer;
+      display: inline-block;
+      position: relative;
+      transition: 0.5s;
+    }
+
+    .btn span:after {
+      content: '\00bb';
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      right: -20px;
+      transition: 0.5s;
+    }
+
+    .btn:hover span {
+      padding-right: 25px;
+    }
+
+    .btn:hover span:after {
+      opacity: 1;
+      right: 0;
+    }
+
   </style>
   
   <body>
@@ -357,7 +426,7 @@
               <p style="font-size: 20px;"> I am a 16-year-old high school student born and raised in Toronto, Canada. I have attended Upper Canada College since grade 9. </p>
             </div>
             <div class="col-md-4">
-                <img src="images/CanadaWonderland.jpg" style="float: center;">
+                <img src="images/CanadaWonderland.jpg" style="float: center; width=1">
             </div>
           </div>
         </div>
@@ -414,15 +483,15 @@
           </div>
           <form>
             <div class="form-group">
-              <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email">
+              <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" required>
             </div>
             <div class="form-group">
-              <input type="subject" class="form-control" placeholder="Subject">
+              <input type="subject" class="form-control" placeholder="Subject" required>
             </div>
             <div class="form-group">
-              <textarea class="form-control" rows="3" placeholder="Message"></textarea>
+              <textarea class="form-control" rows="3" placeholder="Message" required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Send</button>
+            <button type="submit" class="btn">Send</button>
           </form>
           <br>
           <p> Check out some other platforms I'm on! </p>
