--- a/index.html
+++ b/index.html
@@ -481,18 +481,23 @@
           <div>
             <p> You can send me a message on this website! </p>
           </div>
-          <form>
-            <div class="form-group">
-              <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" required>
-            </div>
-            <div class="form-group">
-              <input type="subject" class="form-control" placeholder="Subject" required>
-            </div>
-            <div class="form-group">
-              <textarea class="form-control" rows="3" placeholder="Message" required></textarea>
-            </div>
-            <button type="submit" class="btn">Send</button>
-          </form>
+          <div class="container">
+            <form>
+              <div class="form-group">
+                <label>Email</label>
+                <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" required>
+              </div>
+              <div class="form-group">
+                <label>Subject</label>
+                <input type="subject" class="form-control" placeholder="Subject" required>
+              </div>
+              <div class="form-group">
+                <label>Message</label>
+                <textarea class="form-control" rows="3" placeholder="Message" required></textarea>
+              </div>
+              <button type="submit" class="btn">Send</button>
+            </form>
+          </div>
           <br>
           <p> Check out some other platforms I'm on! </p>
           <div class="row">
