--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       border: 2px solid #008CBA;
     }
 
-    .btnn:hover {
+    .btn:hover {
         background-color: #008CBA;
         color: white;
     }
@@ -352,31 +352,6 @@
       margin: 0;
       opacity: 1;
       transition: 0s
-    }
-
-    .btn span {
-      cursor: pointer;
-      display: inline-block;
-      position: relative;
-      transition: 0.5s;
-    }
-
-    .btn span:after {
-      content: '\00bb';
-      position: absolute;
-      opacity: 0;
-      top: 0;
-      right: -20px;
-      transition: 0.5s;
-    }
-
-    .btn:hover span {
-      padding-right: 25px;
-    }
-
-    .btn:hover span:after {
-      opacity: 1;
-      right: 0;
     }
 
   </style>
@@ -503,7 +478,7 @@
           <div class="row">
             <div class="col-md-4">
             </div>
-            <div id="media" class="col-md-4" style="float: center;">
+            <div id="media" class="col-md-4" style="vertical-align: text-top;">
                   <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
                     <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
                   </a>
