--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
       height: 10px;
     }
 
+    #welcome {
+      top: 340px;
+    }
+
     #intro1 {
       font-size: 20px;
     }
@@ -370,6 +374,15 @@
 
     <img src="images/TBCoverPhoto.jpg" style="width: 101.06%;" id="coverPhoto"> </img>
 
+    <div id="welcome">
+      <h1> Welcome! </h1>
+      <br>
+      <h1> My name is <b> Jack Douglas </b> </h1>
+      <br>
+      <br>
+      <h3> This is my personal website. Have a look around! </h3>
+    </div>
+
     <section id="AboutMe">
       <div class="container">
         <div class="section-title1">
@@ -460,10 +473,10 @@
             </div>
             <div id="media" class="col-md-4" style="vertical-align: text-top;">
                   <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
-                    <i class="fa fa-linkedin-square fa-4x" style="color: #014B67;"> </i>
+                    <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: left;"> </i>
                   </a>
                   <a href="https://github.com/j-douglas/" style="text-decoration: none">
-                    <i class="fa fa-github fa-4x" style="color: #000000;"> </i>
+                    <i class="fa fa-github fa-4x" style="color: #000000; float: right;"> </i>
                   </a>
               </div>
               <div class="col-md-4">
