--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
     #welcome {
       top: 340px;
+      text-align: center;
+      color: white;
     }
 
     #intro1 {
@@ -369,10 +371,11 @@
       </div>
     </nav>
 
+<div>
     <div id="marker">
     </div>
 
-    <img src="images/TBCoverPhoto.jpg" style="width: 101.06%;" id="coverPhoto"> </img>
+    <img src="images/TBCoverPhoto.jpg" style="width: 101.06%; top: 0;" id="coverPhoto"> </img>
 
     <div id="welcome">
       <h1> Welcome! </h1>
@@ -382,6 +385,7 @@
       <br>
       <h3> This is my personal website. Have a look around! </h3>
     </div>
+</div>
 
     <section id="AboutMe">
       <div class="container">
