--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
   
   <body>
 
+<div>
     <nav class="navbar sticky-top navbar1" id="nav" role="navigation"> 
       <div class="navbar-header row">
         <div class="col-md-4">
@@ -371,21 +372,16 @@
       </div>
     </nav>
 
-<div>
+
     <div id="marker">
     </div>
 
     <img src="images/TBCoverPhoto.jpg" style="width: 101.06%; top: 0;" id="coverPhoto"> </img>
 
-    <div id="welcome">
-      <h1> Welcome! </h1>
-      <br>
-      <h1> My name is <b> Jack Douglas </b> </h1>
-      <br>
-      <br>
-      <h3> This is my personal website. Have a look around! </h3>
+      <h1 style="text-align: center; color: white; top: 240px;"> Welcome! </h1>
+      <h1 style="text-align: center; color: white; top: 260px;"> My name is <b> Jack Douglas </b> </h1>
+      <h3 style="text-align: center; color: white; top: 300px;"> This is my personal website. Have a look around! </h3>
     </div>
-</div>
 
     <section id="AboutMe">
       <div class="container">
