--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
   
   <body>
 
-<div>
+
     <nav class="navbar sticky-top navbar1" id="nav" role="navigation"> 
       <div class="navbar-header row">
         <div class="col-md-4">
@@ -381,7 +381,7 @@
       <h1 style="text-align: center; color: white; top: 240px;"> Welcome! </h1>
       <h1 style="text-align: center; color: white; top: 260px;"> My name is <b> Jack Douglas </b> </h1>
       <h3 style="text-align: center; color: white; top: 300px;"> This is my personal website. Have a look around! </h3>
-    </div>
+    
 
     <section id="AboutMe">
       <div class="container">
@@ -444,42 +444,46 @@
         <div class="section-title1">
           <h2> Contact </h2>
           <div class="divider"> </div>
-          <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. </p>
-          <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
-          <div>
-            <p> You can send me a message on this website! </p>
-          </div>
-          <div class="container">
-            <form>
-              <div class="form-group">
-                <label>Email</label>
-                <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" required>
-              </div>
-              <div class="form-group">
-                <label>Subject</label>
-                <input type="subject" class="form-control" placeholder="Subject" required>
-              </div>
-              <div class="form-group">
-                <label>Message</label>
-                <textarea class="form-control" rows="3" placeholder="Message" required></textarea>
-              </div>
-              <button type="submit" class="btn">Send</button>
-            </form>
-          </div>
-          <br>
-          <p> Check out some other platforms I'm on! </p>
-          <div class="row">
-            <div class="col-md-4">
+          <div class="col-md-6">
+            <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. </p>
+            <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
+            <div>
+              <p> You can send me a message on this website! </p>
             </div>
-            <div id="media" class="col-md-4" style="vertical-align: text-top;">
-                  <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
-                    <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: left;"> </i>
-                  </a>
-                  <a href="https://github.com/j-douglas/" style="text-decoration: none">
+            <br>
+            <p> Check out some other platforms I'm on! </p>
+            <div class="row">
+              <div class="col-md-4">
+              </div>
+              <div id="media" class="col-md-4" style="vertical-align: text-top;">
+                <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
+                  <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: left;"> </i>
+                </a>
+                <a href="https://github.com/j-douglas/" style="text-decoration: none">
                     <i class="fa fa-github fa-4x" style="color: #000000; float: right;"> </i>
-                  </a>
+                </a>
               </div>
               <div class="col-md-4">
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="container" style="background-color: grey;">
+              <form>
+                <div class="form-group">
+                  <label style="color: white;">Email</label>
+                  <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                  <label style="color: white;">Subject</label>
+                  <input type="subject" class="form-control" placeholder="Subject" required>
+                </div>
+                <div class="form-group">
+                  <label style="color: white;">Message</label>
+                  <textarea class="form-control" rows="3" placeholder="Message" required></textarea>
+                </div>
+                <button type="submit" class="btn">Send</button>
+              </form>
             </div>
           </div>
       </div>
