--- a/index.html
+++ b/index.html
@@ -344,7 +344,6 @@
   
   <body>
 
-
     <nav class="navbar sticky-top navbar1" id="nav" role="navigation"> 
       <div class="navbar-header row">
         <div class="col-md-4">
@@ -376,11 +375,7 @@
     <div id="marker">
     </div>
 
-    <h1 style="text-align: center; color: white; top: 240px;"> Welcome! </h1>
-    <h1 style="text-align: center; color: white; top: 260px;"> My name is <b> Jack Douglas </b> </h1>
-    <h3 style="text-align: center; color: white; top: 300px;"> This is my personal website. Have a look around! </h3>
-
-    <img src="images/TBCoverPhoto.jpg" style="width: 101.06%; top: 0;" id="coverPhoto"> </img>
+    <img src="images/TBCoverPhoto.jpg" style="width: 101.06%;" id="coverPhoto"> </img>
 
     <section id="AboutMe">
       <div class="container">
@@ -453,17 +448,15 @@
               <br>
               <p> Check out some other platforms I'm on! </p>
               <div class="row">
-                <div class="col-md-4">
-                </div>
-                <div id="media" class="col-md-4" style="vertical-align: text-top;">
+                <div class="col-md-6" style="vertical-align: text-top;">
                   <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
                     <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: left;"> </i>
                   </a>
+                </div>
+                <div class="col-md-6" style="vertical-align: text-top;">
                   <a href="https://github.com/j-douglas/" style="text-decoration: none">
                       <i class="fa fa-github fa-4x" style="color: #000000; float: right;"> </i>
                   </a>
-                </div>
-                <div class="col-md-4">
                 </div>
               </div>
             </div>
