--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
         <div class="col-md-4">
             <div class="tabbable-line">
               <ul class="nav nav-tabs">
-                <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
-                <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
-                <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
-                <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
+                <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe" style="color: white;"> About Me </a></li>
+                <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects" style="color: white;"> Projects </a></li>
+                <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills" style="color: white;"> Skills </a></li>
+                <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards" style="color: white;"> Awards </a></li>
               </ul>
             </div>
         </div>
@@ -364,7 +364,7 @@
         <div class="col-md-4">
             <div class="tabbable-line">
               <ul class="nav nav-tabs">
-                <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
+                <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact" style="color: white;"> Contact </a></li>
               </ul>
             </div>
         </div>
@@ -445,17 +445,16 @@
               <div>
                 <p> You can send me a message on this website! </p>
               </div>
-              <br>
               <p> Check out some other platforms I'm on! </p>
               <div class="row">
                 <div class="col-md-6" style="vertical-align: text-top;">
                   <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
-                    <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: left;"> </i>
+                    <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: center;"> </i>
                   </a>
                 </div>
                 <div class="col-md-6" style="vertical-align: text-top;">
                   <a href="https://github.com/j-douglas/" style="text-decoration: none">
-                      <i class="fa fa-github fa-4x" style="color: #000000; float: right;"> </i>
+                      <i class="fa fa-github fa-4x" style="color: #000000; float: center;"> </i>
                   </a>
                 </div>
               </div>
