--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
     }
 
     #welcome {
-      top: 340px;
       text-align: center;
       color: white;
     }
@@ -375,6 +374,15 @@
     <div id="marker">
     </div>
 
+    <div id="welcome">
+      <h1> Welcome! </h1>
+      <br>
+      <h1> My name is <b> Jack Douglas </b> </h1>
+      <br>
+      <br>
+      <h3> This is my personal website. Have a look around! </h3>
+    </div>
+
     <img src="images/TBCoverPhoto.jpg" style="width: 101.06%;" id="coverPhoto"> </img>
 
     <section id="AboutMe">
@@ -449,12 +457,12 @@
               <div class="row">
                 <div class="col-md-6" style="vertical-align: text-top;">
                   <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
-                    <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: center;"> </i>
+                    <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: right;"> </i>
                   </a>
                 </div>
                 <div class="col-md-6" style="vertical-align: text-top;">
                   <a href="https://github.com/j-douglas/" style="text-decoration: none">
-                      <i class="fa fa-github fa-4x" style="color: #000000; float: center;"> </i>
+                      <i class="fa fa-github fa-4x" style="color: #000000; float: left;"> </i>
                   </a>
                 </div>
               </div>
