--- a/index.html
+++ b/index.html
@@ -339,51 +339,57 @@
         color: white;
     }
 
+    #home {
+      background-image: url("images/TBCoverPhoto.jpg");
+    }
+
   </style>
   
   <body>
 
-    <nav class="navbar sticky-top navbar1" id="nav" role="navigation"> 
-      <div class="navbar-header row">
-        <div class="col-md-4">
-            <div class="tabbable-line">
-              <ul class="nav nav-tabs">
-                <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe" style="color: white;"> About Me </a></li>
-                <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects" style="color: white;"> Projects </a></li>
-                <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills" style="color: white;"> Skills </a></li>
-                <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards" style="color: white;"> Awards </a></li>
-              </ul>
-            </div>
+    <div id="home">
+
+      <nav class="navbar sticky-top navbar1" id="nav" role="navigation"> 
+        <div class="navbar-header row">
+          <div class="col-md-4">
+              <div class="tabbable-line">
+                <ul class="nav nav-tabs">
+                  <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe" style="color: white;"> About Me </a></li>
+                  <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects" style="color: white;"> Projects </a></li>
+                  <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills" style="color: white;"> Skills </a></li>
+                  <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards" style="color: white;"> Awards </a></li>
+                </ul>
+              </div>
+          </div>
+          <div class="col-md-4">  
+            <a class="navbar-brand" href="index.html" id="logo">
+              <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
+            </a>
+          </div>
+          <div class="col-md-4">
+              <div class="tabbable-line">
+                <ul class="nav nav-tabs">
+                  <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact" style="color: white;"> Contact </a></li>
+                </ul>
+              </div>
+          </div>
         </div>
-        <div class="col-md-4">  
-          <a class="navbar-brand" href="index.html" id="logo">
-            <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-          </a>
-        </div>
-        <div class="col-md-4">
-            <div class="tabbable-line">
-              <ul class="nav nav-tabs">
-                <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact" style="color: white;"> Contact </a></li>
-              </ul>
-            </div>
-        </div>
+      </nav>
+
+
+      <div id="marker">
       </div>
-    </nav>
 
+      <div id="welcome">
+        <h1> Welcome! </h1>
+        <br>
+        <h1> My name is <b> Jack Douglas </b> </h1>
+        <br>
+        <br>
+        <h3> This is my personal website. Have a look around! </h3>
+      </div>
 
-    <div id="marker">
     </div>
-
-    <div id="welcome">
-      <h1> Welcome! </h1>
-      <br>
-      <h1> My name is <b> Jack Douglas </b> </h1>
-      <br>
-      <br>
-      <h3> This is my personal website. Have a look around! </h3>
-    </div>
-
-    <img src="images/TBCoverPhoto.jpg" style="width: 101.06%;" id="coverPhoto"> </img>
 
     <section id="AboutMe">
       <div class="container">
